test/spec_vectors/loop/fail/module_19.wat
(module (func $type-value-empty-vs-num (result i32) (loop (result i32))))